[package]
name = "barectf-printer"
version = "0.2.0"
edition = "2021"
authors = ["Jon Lamb"]
description = "Print barectf-generated CTF trace data from file"
license-file = "LICENSE-MIT"
repository = "https://github.com/jonlamb-gh/barectf-printer"

[dependencies]
exitcode = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features=["derive"] }
serde_yaml = "0.9.34"
colored = "3.0.0"
barectf-parser = "0.3"

[target.'cfg(target_family = "unix")'.dependencies]
# Used to prevent panics on broken pipes.
# See:
#   https://github.com/rust-lang/rust/issues/46016#issuecomment-605624865
nix = { version = "0.29", features = ["signal"] }

[package.metadata.deb]
extended-description = """\
A CLI to print barectf-generated CTF trace data from file. \

See https://github.com/jonlamb-gh/barectf-printer for \
more information."""
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/barectf-printer", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/barectf-printer/README", "644"],
]
